Parametrizzazione percorso librerie

--- a/appunti/template/html/testa.html
+++ b/appunti/template/html/testa.html
@@ -21,7 +21,7 @@
 
     <!-- Online Python Tutor -->
     <!--script type="text/javascript" src="http://pythontutor.com/build/pytutor-embed.bundle.js" charset="utf-8"></script-->
-    <script type="text/javascript" src="../../lib/pytutor-embed.bundle.js" charset="utf-8"></script>
+    <script type="text/javascript" src="{{prefisso}}lib/pytutor-embed.bundle.js" charset="utf-8"></script>
 
     <title>{{titolo}}</title>
 
