Modifica del compito con tentativo di correzione automatizzata

--- a/appunti/database/sql/verifica_sql/lib/pagina.css
+++ b/appunti/database/sql/verifica_sql/lib/pagina.css
@@ -9,17 +9,18 @@
     }
 
     .griglia {
-        display: grid;
+        /*display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: 50%;
-        /*align-items: stretch;*/
-        minmax(3%, auto);
+        align-items: stretch;
+        minmax(10px, auto);
+        */
     }
 
-    .griglia > div {
-        /*resize: both;
+    .griglia>div {
+        resize: both;
         overflow: auto;
-        border: 1px solid lightgrey;*/
+        border: 1px solid lightgrey;
         overflow: hidden;
     }
 
@@ -97,7 +98,7 @@
         float: right;
     }
 
-    .comandi > button {
+    .comandi>button {
         margin: 0px 10px;
     }
 
@@ -115,7 +116,7 @@
         font-family: "Droid Sans Mono", "DejaVu Sans Mono", monospace;
         font-weight: bolder;
         color: rgba(224, 32, 32, .9);
-        font-style: normal!important;
+        font-style: normal !important;
         letter-spacing: 0;
         padding: .1em .5ex;
         word-spacing: -.15em;
