--- a/appunti/database/sql/verifica_sql/lib/pagina.css
+++ b/appunti/database/sql/verifica_sql/lib/pagina.css
@@ -8,7 +8,7 @@
         padding: 0px;
     }
 
-    .griglia {
+    .contenitore {
         /*display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: 50%;
@@ -17,7 +17,7 @@
         */
     }
 
-    .griglia>div {
+    .contenitore>div {
         resize: both;
         overflow: auto;
         border: 1px solid lightgrey;
@@ -100,12 +100,6 @@
 
     .comandi>button {
         margin: 0px 10px;
-    }
-
-    .CodeMirror {
-        border: 2px solid #eee;
-        /*height: auto;*/
-        height: 100%;
     }
 
     #tab_test {
